# precursor-planner

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  planner.rs  storage.rs  ui.rs
